--- a/public/avata.css
+++ b/public/avata.css
@@ -18,36 +18,37 @@ body {
 }
 
 .main_container {
-  position: relative;
-  border: 1px solid black;
+  max-width: 800px;
+  width: 100%;
   height: 80%;
 }
 
-.avatar_container {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  display: none;
-}
-
-.avatar_container img {
-  position: absolute;
-}
-
-.question_container {
-  padding: 10px;
-  height: 10%;
-}
-
-.score_container {
+.avata_container {
   border: 1px solid black;
-  height: 20%;
-  padding: 10px;
+  height: 50%;
+  position: relative; /* 부모 요소를 기준으로 자식 요소들의 위치를 설정 */
+}
+
+.avata_container img {
+  position: absolute; /* 이미지들을 겹치게 만듦 */
+}
+
+.shop_container {
+  border: 1px solid black;
+  height: 50%;
   overflow: auto;
 }
 
+.item_container {
+  white-space: nowrap;
+  height: 50%;
+  display: flex;
+  overflow-x: auto;
+}
+
 .input_container {
-  padding: 10px;
+  max-width: 800px;
+  width: 100%;
   height: 10%;
 }
 
@@ -61,20 +62,4 @@ body {
   color: white; /* 글자색 설정 */
   border: none; /* 테두리 설정 */
   cursor: pointer; /* 마우스 커서 설정 */
-}
-
-.chat_container {
-  border: 1px solid black;
-  padding: 10px;
-  height: 50%;
-  overflow: auto;
-}
-
-#usernameForm,
-#game {
-  text-align: center;
-}
-
-#scoreboard {
-  /* margin-top: 20px; */
 }
